# GAIL

./: .gitignore  CMakeLists.txt  README.md
src/algorithms/: evolution.hpp
src/core/: client.hpp  game.hpp  match.hpp  player.hpp  stream_client.hpp
src/games/: fantastic_four.cpp  fantastic_four.hpp  tic_tac_toe.cpp  tic_tac_toe.hpp
src/games/code_vs_zombies/: clients.hpp  code_vs_zombies.cpp  code_vs_zombies.hpp  players.hpp  point2d.hpp  simulator.hpp
src/games/fantastic_four/: README.md  challenge.hpp  clients.hpp  fantastic_four.cpp  fantastic_four.hpp  random_player.hpp  scorers.hpp  search_with_scorer_player.hpp  simulator.hpp  tree_search_player.hpp  utils.hpp
src/games/fantastic_four/players/: alpha_beta_player.hpp  hasher.hpp  mcts_player.hpp  random_player.hpp  score_utils.hpp  scorers.hpp  search_with_scorer_player.hpp  simple_estimator.hpp  tree_search_player.hpp
src/games/knapsack/: clients.hpp  knapsack.cpp  knapsack.hpp  players.hpp
src/games/tic_tac_toe/: clients.hpp  players.hpp  simulator.hpp  tic_tac_toe.cpp  tic_tac_toe.hpp
src/scripts/: combine_headers.py
src/tests/core/: test_match.cpp
src/tests/games/fantastic_four/: test_clients.cpp
src/utils/: any.hpp  config.hpp
